# permissible

./: .gitignore  README.md  ideas.txt  pyproject.toml
examples/: arq_test.py  arq_test_resources.py  crud_file.py  crud_print.py  crud_sqlalchemy.py  sql_test.py  test.py  test_cat.py  test_discriminate.py  test_overload.py
permissible/: __init__.py  core.py  permissions.py
permissible/crud/: __init__.py  core.py
permissible/crud/backends/: arq.py  file.py  print.py  sqlalchemy.py
tests/: test_permissible.py
