[tool.poetry]
name = "permissible"
version = "0.1.0"
description = ""
authors = ["Edd Salkield <edd@salkield.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.2"
SQLAlchemy = {version = "<=1.3.16", optional = true}
pydantic-sqlalchemy = {version = "^0.0.9", optional = true}
sqlalchemy-filters = {version = "^0.12.0", optional = true}


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
sqlalchemy = ["SQLAlchemy", "sqlalchemy-filters", "pydantic-sqlalchemy"]
