[tool.poetry]
name = "permissible"
version = "0.1.0"
description = ""
authors = ["Edd Salkield <edd@salkield.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.2"
SQLAlchemy = {version = "<=1.3.16", optional = true}
pydantic-sqlalchemy = "^0.0.9"
sqlalchemy-filters = "^0.12.0"
arq = {version = "^0.21", optional = true}
aioredis = "<2.0.0"
fasteners = "^0.16.3"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"
python-multipart = "^0.0.5"
mutate-function = "^0.1.0"

[tool.poetry.extras]
sqlalchemy = ["SQLAlchemy", "sqlalchemy-filters", "pydantic-sqlalchemy"]
arq = ["arq"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

